src/test/lab3/invalid/XX-Fail18.slac
class A {
    method foo(a : Int, b: Int, ) : retType = {
        12
    }
}

method main() : Unit = { println("42") }
